Changed AdminPages - shows list of Bookings/Cars/Customers (routing not 100%)

--- a/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
@@ -55,7 +55,7 @@
       
     </tbody>
 </table>
-<a asp-page="/Users/AdminPage">Tillbaka</a>
+@* <a asp-page="/Users/AdminPage">Tillbaka</a> *@
 
 
 @section Scripts {
