Admin not able to edit Cars Customer has no booking confirmation and can't list bookings via id or remove bookings

--- a/FribergsCarRental/Pages/Cars/CarIndex.cshtml
+++ b/FribergsCarRental/Pages/Cars/CarIndex.cshtml
@@ -35,34 +35,21 @@
                     @Html.DisplayFor(modelItem => item.PictureURL)
                 </td>
 
-                @*       @if (Model.TheUsers.Any(u => u.IsAdmin)) *@
-                @*  <td> *@
-                @*  <a asp-page="/Bookings/CreateBooking" asp-route-id="@item.CarId">Boka</a> *@
-                @*      <a asp-page="/Users/Login" asp-route-id="@item.CarId">Boka</a>
-            </td> *@
-                <td>
-                  @*   <a asp-page="/Bookings/CreateBooking" asp-route-id="@item.CarId">Boka</a> *@
-             @*      <a asp-page="/Users/Login">Logga in/Skapa konto för att boka</a> *@
-@* 
-                <td>
-                    <a asp-page="EditCar" asp-route-id="@item.CarId">Edit</a> |
-                    <a asp-page="Details" asp-route-id="@item.CarId">Details</a> |
-                    <a asp-page="DeleteCar" asp-route-id="@item.CarId">Delete</a> |
-                </td> *@
-               
+                @if (User.IsInRole("Admin"))
+                {
+                    <td>
+                        <a asp-page="EditCar" asp-route-id="@item.CarId">Edit</a> |
+                        <a asp-page="Details" asp-route-id="@item.CarId">Details</a> |
+                        <a asp-page="DeleteCar" asp-route-id="@item.CarId">Delete</a> |
+                    </td>
+                }
+              
             </tr>
-
         }
 
     </tbody>
 </table>
 
-
-
-@* @if (Model.TheUser.Any(u => u.IsAdmin))
-{
-    <a asp-page="/Users/AdminPage">Tillbaka</a>
-} *@
 
 
 
