--- a/FribergsCarRental/Pages/Customers/DeleteCustomer.cshtml
+++ b/FribergsCarRental/Pages/Customers/DeleteCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model FribergsCarRental.Pages.Customers.DeleteModel
 
 @{
@@ -44,3 +44,4 @@
         <a asp-page="CustomerIndex">Back to List</a>
     </form>
 </div>
+ *@
