--- a/FribergsCarRental/Pages/Customers/Details.cshtml
+++ b/FribergsCarRental/Pages/Customers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model FribergsCarRental.Pages.Customers.DetailsModel
 
 @{
@@ -41,3 +41,4 @@
     <a asp-page="./EditCustomer" asp-route-id="@Model.Customer?.CustomerId">Edit</a> |
     <a asp-page="./CustomerIndex">Back to List</a>
 </div>
+ *@
