--- a/FribergsCarRental/Pages/Customers/EditCustomer.cshtml
+++ b/FribergsCarRental/Pages/Customers/EditCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model FribergsCarRental.Pages.Customers.EditModel
 
 @{
@@ -48,3 +48,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+ *@
