--- a/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
@@ -5,28 +5,28 @@
     ViewData["Title"] = "BookingIndex";
 }
 
-<h1>BookingIndex</h1>
+<h1>Bokningar</h1>
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Booking[0].TheUser)
+                @Html.DisplayNameFor(model => model.Bookings[0].TheUser)
             </th> 
             <th>
-                @Html.DisplayNameFor(model => model.Booking[0].Car)
+                @Html.DisplayNameFor(model => model.Bookings[0].Car)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Booking[0].StartDate)
+                @Html.DisplayNameFor(model => model.Bookings[0].StartDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Booking[0].EndDate)
+                @Html.DisplayNameFor(model => model.Bookings[0].EndDate)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.Booking)
+        @foreach (var item in Model.Bookings)
         {
             <tr>
                 <td>
@@ -45,17 +45,23 @@
                     @Html.DisplayFor(modelItem => item.EndDate)
                 </td>
                     
-            <td>
+       @*      <td>
                    
             <a asp-page="/Bookings/BookingIndex" asp-page-handler="Delete" asp-route-id="@item.BookingId">Ta bort</a> |
             </td>
-            
+             *@
+
+                <td>
+                    <form method="post" asp-page-handler="Delete" asp-route-id="@item.BookingId" onsubmit="return confirm('Är du säker på att du vill ta bort bokningen?');">
+                        <button type="submit">Ta bort</button>
+                    </form>
+                </td>
             </tr>
         }
       
     </tbody>
 </table>
-@* <a asp-page="/Users/AdminPage">Tillbaka</a> *@
+
 
 
 @section Scripts {
