--- a/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
@@ -31,6 +31,6 @@
 </form>
 
 <div>
-    <a asp-page="/Bookings/BookingIndex">Tillbaka</a>
+    <a asp-page="/Users/CustomerPage">Tillbaka</a>
 </div>
 
