--- a/FribergsCarRental/Pages/Cars/DeleteCar.cshtml
+++ b/FribergsCarRental/Pages/Cars/DeleteCar.cshtml
@@ -5,11 +5,9 @@
     ViewData["Title"] = "DeleteCar";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Är du säker på att du vill radera bilen?</h3>
 <div>
-    <h4>Car</h4>
+  
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -34,7 +32,6 @@
     
     <form method="post">
         <input type="hidden" asp-for="Car.CarId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="CarIndex">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />       
     </form>
 </div>
