--- a/FribergsCarRental/Pages/Customers/CreateCustomer.cshtml
+++ b/FribergsCarRental/Pages/Customers/CreateCustomer.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@* @page
 @model FribergsCarRental.Pages.Customers.CreateModel
 
 @{
@@ -50,3 +50,4 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+ *@
