--- a/FribergsCarRental/Pages/Users/DeleteUser.cshtml
+++ b/FribergsCarRental/Pages/Users/DeleteUser.cshtml
@@ -5,11 +5,9 @@
     ViewData["Title"] = "DeleteUser";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Är du säker på att du vill ta bort användaren?</h3>
 <div>
-    <h4>User</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -36,20 +34,20 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TheUser.Password)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TheUser.IsAdmin)
+        @*   <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.TheUser.IsAdmin)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TheUser.IsAdmin)
-        </dd>
+        @Html.DisplayFor(model => model.TheUser.IsAdmin)
+        </dd> *@
     </dl>
 
     <form method="post">
         <input type="hidden" asp-for="TheUser.TheUserId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="UserIndex">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        @*     <a asp-page="UserIndex">Back to List</a> *@
     </form>
-
+</div>
 @*     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.User.Email)
@@ -70,7 +68,7 @@
             @Html.DisplayFor(model => model.User.IsAdmin)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="User.UserId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
