Added client-side validation to CRUD-pages

--- a/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
@@ -34,3 +34,8 @@
     <a asp-page="/Users/CustomerPage">Tillbaka</a>
 </div>
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
