--- a/FribergsCarRental/Pages/Users/CustomerCarIndex.cshtml
+++ b/FribergsCarRental/Pages/Users/CustomerCarIndex.cshtml
@@ -43,3 +43,8 @@
         }
     </tbody>
 </table>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
