--- a/FribergsCarRental/Pages/Cars/DeleteCar.cshtml
+++ b/FribergsCarRental/Pages/Cars/DeleteCar.cshtml
@@ -35,3 +35,8 @@
         <input type="submit" value="Delete" class="btn btn-danger" />       
     </form>
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
