--- a/FribergsCarRental/Pages/Index.cshtml
+++ b/FribergsCarRental/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Välkommen!</h1>
-    <p>Intresserad av att hyra en bil? Logga in eller skapa ett konto :))))</p>
+    <p>Intresserad av att hyra en bil? Logga in eller skapa ett konto :)</p>
 </div>
