--- a/FribergsCarRental/Pages/Users/CustomerPage.cshtml
+++ b/FribergsCarRental/Pages/Users/CustomerPage.cshtml
@@ -52,3 +52,8 @@
 <a asp-page="/Users/CustomerCarIndex">Skapa ny bokning</a>
 
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
