--- a/FribergsCarRental/Pages/Users/DeleteUser.cshtml
+++ b/FribergsCarRental/Pages/Users/DeleteUser.cshtml
@@ -41,3 +41,8 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> 
     </form>
 </div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
