--- a/FribergsCarRental/Pages/Users/UserIndex.cshtml
+++ b/FribergsCarRental/Pages/Users/UserIndex.cshtml
@@ -61,3 +61,9 @@
 
 </table>
 <a asp-page="AdminPage">Tillbaka</a>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
