Works to Delete Bookings from /Bookings/CustomerBookingIndex

--- a/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "CreateBooking";
 }
 
-<h1>CreateBooking</h1>
+<h1>Boka bil</h1>
 
-<h4>Booking</h4>
 <hr />
 
 <form method="post">
