--- a/FribergsCarRental/Pages/Users/AdminCarIndex.cshtml
+++ b/FribergsCarRental/Pages/Users/AdminCarIndex.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "AdminCarIndex";
 }
 
-<h1>AdminCarIndex</h1>
+<h1>Bilar</h1>
 
 <p>
-    <a asp-page="/Cars/CreateCar">Create New</a>
+    <a asp-page="/Cars/CreateCar">Lägg till bil</a>
 </p>
 <table class="table">
     <thead>
