--- a/FribergsCarRental/Pages/Users/CustomerPage.cshtml
+++ b/FribergsCarRental/Pages/Users/CustomerPage.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using FribergsCarRental.Data.Models;
 @model FribergsCarRental.Pages.Users.CustomerPageModel
 
 @{
@@ -30,8 +29,8 @@
     <tbody>
         @foreach (var item in Model.Bookings)
         {
-            <tr>
-                <td>
+            <tr>            
+                <td>                    
                     @Html.DisplayFor(modelItem => item.Car.Brand)
                     @Html.DisplayFor(modelItem => item.Car.Model)
                 </td>
@@ -45,7 +44,18 @@
                     @Html.DisplayFor(modelItem => item.TheUser.FirstName)
                     @Html.DisplayFor(modelItem => item.TheUser.LastName)
                 </td>
+                <td>
+                <td>
+                    <a asp-page="/Bookings/CustomersBookingIndex" asp-page-handler="Delete" asp-route-id="@item.BookingId">Ta bort</a>
+                </td>
+                 @*    <form method="post" asp-page-handler="Delete" asp-route-id="@item.BookingId" onsubmit="return confirm('Är du säker på att du vill ta bort bokningen?');">
+                       
+                        <button type="submit" value="Delete" class="btn btn-danger">Ta bort</button>
+                    </form> *@
+                </td>
             </tr>
+
+           
         }
     </tbody>
 </table>
