--- a/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
@@ -47,7 +47,7 @@
 
                 <td>
                     <form method="post" asp-page-handler="Delete" asp-route-id="@item.BookingId" onsubmit="return confirm('Är du säker på att du vill ta bort bokningen?');">
-                        <button type="submit">Ta bort</button>
+                        <button type="submit" value="Delete" class="btn btn-danger">Ta bort</button>
                     </form>
                 </td>
             </tr>
