--- a/FribergsCarRental/Pages/Cars/EditCar.cshtml
+++ b/FribergsCarRental/Pages/Cars/EditCar.cshtml
@@ -5,15 +5,14 @@
     ViewData["Title"] = "EditCar";
 }
 
-<h1>Edit</h1>
+<h1>Ändra bil</h1>
 
-<h4>Car</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">          
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Car.CarId" />
+            <input type="hidden" asp-for="Car.CarId" />           
             <div class="form-group">
                 <label asp-for="Car.Brand" class="control-label"></label>
                 <input asp-for="Car.Brand" class="form-control" />
@@ -37,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-page="/Users/AdminCarIndex">Back to List</a>
+    <a asp-page="/Users/AdminCarIndex">Tillbaka</a>
 </div>
 
 @section Scripts {
