--- a/FribergsCarRental/Pages/Users/LogIn.cshtml
+++ b/FribergsCarRental/Pages/Users/LogIn.cshtml
@@ -12,13 +12,13 @@
 
     <div class="form-group">
      <input type="hidden" asp-for="TheUser.TheUserId" />
-        <label asp-for="TheUser.Email" class="control-label">Email</label>
+        <label asp-for="TheUser.Email" class="control-label">E-mail</label>
         <input asp-for="TheUser.Email" class="form-control" />
         <span asp-validation-for="TheUser.Email" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="TheUser.Password" class="control-label">Password</label>
+        <label asp-for="TheUser.Password" class="control-label">Lösenord</label>
         <input asp-for="TheUser.Password" type="password" class="form-control" />
         <span asp-validation-for="TheUser.Password" class="text-danger"></span>
     </div>
