--- a/FribergsCarRental/Pages/Bookings/CustomersBookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CustomersBookingIndex.cshtml
@@ -8,7 +8,7 @@
 <h1>CustomersBookingIndex</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Skapa ny bokning</a>
 </p>
 <table class="table">
     <thead>
