--- a/FribergsCarRental/Pages/Cars/CreateCar.cshtml
+++ b/FribergsCarRental/Pages/Cars/CreateCar.cshtml
@@ -7,7 +7,6 @@
 
 <h1>Lägg till bil</h1>
 
-<h4>Car</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,9 +34,9 @@
         </form>
     </div>
 </div>
-
+<br />
 <div>
-    <a asp-page="/Users/AdminCarIndex">Back to List</a>
+    <a asp-page="/Users/AdminCarIndex">Tillbaka</a>
 </div>
 
 @section Scripts {
