--- a/FribergsCarRental/Pages/Users/AdminPage.cshtml
+++ b/FribergsCarRental/Pages/Users/AdminPage.cshtml
@@ -118,7 +118,7 @@
     </tbody>
 </table>
 <p>
-    <a asp-page="/Users/CreateUser">Lägg till kund</a>
+    <a asp-page="/Users/UserIndex">Lägg till kund</a>
 </p>
 
 
