--- a/FribergsCarRental/Pages/Users/CustomerPage.cshtml
+++ b/FribergsCarRental/Pages/Users/CustomerPage.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Välkommen @Model.UserFirstName! </h1>
 
-<h2>Dina bokningar: </h2>
+@* <h2>Dina bokningar: </h2>
 <table class="table">
     <thead>
         <tr>
@@ -54,7 +54,7 @@
         }
     </tbody>
 </table>
-<a asp-page="/Users/CustomerCarIndex">Skapa ny bokning</a>
+<a asp-page="/Users/CustomerCarIndex">Skapa ny bokning</a> *@
 
 
 @section Scripts {
