--- a/FribergsCarRental/Pages/Shared/_Layout.cshtml
+++ b/FribergsCarRental/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,10 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Users/CustomerCarIndex">Bilar</a>
-                            </li>                       
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Bookings/CustomersBookingIndex">Mina bokningar</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Logga ut</a>
                             </li>
