--- a/FribergsCarRental/Pages/Bookings/BookingConfirmation.cshtml
+++ b/FribergsCarRental/Pages/Bookings/BookingConfirmation.cshtml
@@ -7,8 +7,51 @@
 
 <h1>Bokningsbekräftelse</h1>
 
+<div>
+    <hr />
+    <dl class="row">   
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.Car)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.Car.Brand)
+            @Html.DisplayFor(model => model.Booking.Car.Model)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.TheUser)
 
-<table class="table">
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.TheUser.FirstName)
+            @Html.DisplayFor(model => model.Booking.TheUser.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.StartDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.StartDate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Booking.EndDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Booking.EndDate)
+        </dd>
+    </dl>
+
+
+    <form method="post">
+        <input type="hidden" asp-for="Booking.BookingId" />
+        <input type="submit" value="Ok" class="btn btn-danger" />
+    </form>
+</div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
+
+@* <table class="table">
     <thead>
         <tr>
             <th>
@@ -21,4 +64,4 @@
         </tr>
     </thead>
  
-</table>
+</table> *@
